test_results_defects/infer_test/not_return/report.txt
#0
/home/cs4239/Desktop/cs5218/Benchmarks/01.w_Defects/not_return.c:98: error: Dead Store
  The value written to &ret (type int) is never used.
   96. 	return ret;
   97. my_label:
   98. 	ret ++;
        ^
   99. }/*Tool should detect this line as error*/ /*ERROR: No return value */
  100. 

Found 1 issue
  Issue Type(ISSUED_TYPE_ID): #
      Dead Store(DEAD_STORE): 1
